# gym_ai

./: README.md
chatbotdemo/: pyproject.toml  qa.docx
chatbotdemo/chatbotdemo/: rag.py
chatbotdemo/langserveapp/: Dockerfile  pyproject.toml
chatbotdemo/langserveapp/app/: process.py  server.py
chatbotdemo/langserveapp/rag/: rag_chain.py
