[tool.poetry]
name = "chatbotdemo"
version = "0.1.0"
description = ""
authors = ["Youchen Jiang <1014308g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
qdrant-client = "^1.11.1"
langchain-community = "^0.2.12"
pypdf = "^4.3.1"
langchain-cli = "^0.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
