[tool.poetry]
name = "chatbotdemo"
version = "0.1.0"
description = ""
authors = ["Youchenjiang <1014308g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.10"
langchain-openai = "^0.2.11"
langchain-community = "^0.3.10"
langchain-cli = "^0.0.35"
qdrant-client = "^1.12.1"
pypdf = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
