[tool.poetry]
name = "langserveapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
qdrant-client = "^1.11.1"
langchain-community = "^0.2.12"
pypdf = "^4.3.1"
streamlit = "^1.39.0"
fastapi = "^0.115.2"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
